[gd_scene load_steps=11 format=3 uid="uid://db6y2edw3y4w3"]

[ext_resource type="Theme" uid="uid://8o8bmos7gb0u" path="res://assets/cartoon_ui_theme.tres" id="1_2iamd"]
[ext_resource type="Script" uid="uid://dgdtu8pg48cdo" path="res://ui/hud/quest/quest_modal.gd" id="1_22lbx"]
[ext_resource type="Texture2D" uid="uid://dlk64e35gu3nl" path="res://assets/modalimage/taskBG.png" id="3_q0wwo"]
[ext_resource type="Texture2D" uid="uid://b4on6cvv5r02b" path="res://assets/icons/closeBtn.png" id="4_78vsm"]
[ext_resource type="Texture2D" uid="uid://6ydvmsnbbrax" path="res://assets/icons/未命名的作品 (14).png" id="5_b6meu"]
[ext_resource type="Texture2D" uid="uid://c15368wnann5m" path="res://assets/modalimage/title.png" id="6_qbihl"]
[ext_resource type="Texture2D" uid="uid://bs55d1xito274" path="res://assets/modalimage/unselect.png" id="7_qbihl"]
[ext_resource type="Texture2D" uid="uid://bq1il2c5ypp08" path="res://assets/modalimage/select.png" id="8_tfmh5"]
[ext_resource type="FontFile" uid="uid://bopuqrdiff5py" path="res://Baloo_2/PopGothicCjkTc-Bold.ttf" id="9_qbihl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_igw40"]
bg_color = Color(0.690196, 0.827451, 0.270588, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 30.0
expand_margin_top = 5.0
expand_margin_right = 30.0
expand_margin_bottom = 5.0
shadow_color = Color(0.376471, 0.65098, 0.164706, 1)
shadow_size = 1
shadow_offset = Vector2(5, 5)

[node name="QuestModal" type="ColorRect"]
z_index = 200
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2iamd")
color = Color(0, 0, 0, 0.294118)
script = ExtResource("1_22lbx")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -498.0
offset_top = -1023.5
offset_right = 498.0
offset_bottom = 1023.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_q0wwo")

[node name="CloseButton2" type="TextureButton" parent="TextureRect"]
z_index = 200
layout_mode = 1
anchors_preset = -1
offset_left = 790.0
offset_top = 434.5
offset_right = 990.0
offset_bottom = 634.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.696)
texture_normal = ExtResource("4_78vsm")
texture_pressed = ExtResource("5_b6meu")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect2" type="TextureRect" parent="TextureRect"]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1038.0
offset_top = 28.5
offset_right = -42.0
offset_bottom = 2075.5
grow_horizontal = 0
scale = Vector2(1.08601, 0.940496)
mouse_filter = 2
texture = ExtResource("6_qbihl")

[node name="ListPage" type="Control" parent="TextureRect"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TabButtons" type="Control" parent="TextureRect/ListPage"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 94.0
offset_top = 1402.5
offset_right = 94.0
offset_bottom = 1402.5
grow_vertical = 2

[node name="DailyTaskButton" type="TextureButton" parent="TextureRect/ListPage/TabButtons"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("7_qbihl")
texture_pressed = ExtResource("8_tfmh5")

[node name="Label" type="Label" parent="TextureRect/ListPage/TabButtons/DailyTaskButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.0
offset_top = 270.0
offset_right = 125.0
offset_bottom = 997.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.266667, 0.156863, 0.164706, 1)
theme_override_fonts/font = ExtResource("9_qbihl")
theme_override_font_sizes/font_size = 250
text = "每
日"

[node name="AchievementButton" type="TextureButton" parent="TextureRect/ListPage/TabButtons"]
layout_mode = 0
offset_left = 151.0
offset_right = 1111.0
offset_bottom = 1920.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("7_qbihl")
texture_pressed = ExtResource("8_tfmh5")

[node name="Label" type="Label" parent="TextureRect/ListPage/TabButtons/AchievementButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.0
offset_top = 270.0
offset_right = 125.0
offset_bottom = 997.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.266667, 0.156863, 0.164706, 1)
theme_override_fonts/font = ExtResource("9_qbihl")
theme_override_font_sizes/font_size = 250
text = "成
就"

[node name="DailyTaskPage" type="PanelContainer" parent="TextureRect/ListPage"]
layout_mode = 0
offset_left = 171.0
offset_top = 577.5
offset_right = 825.0
offset_bottom = 1421.5

[node name="QuestList" type="VBoxContainer" parent="TextureRect/ListPage/DailyTaskPage"]
layout_mode = 2

[node name="AchievementPage" type="PanelContainer" parent="TextureRect/ListPage"]
layout_mode = 0
offset_left = 171.0
offset_top = 577.5
offset_right = 825.0
offset_bottom = 1421.5

[node name="QuestList" type="VBoxContainer" parent="TextureRect/ListPage/AchievementPage"]
layout_mode = 2

[node name="DetailsPage" type="VBoxContainer" parent="TextureRect"]
layout_mode = 2
offset_left = 175.0
offset_top = 581.5
offset_right = 821.0
offset_bottom = 1417.5

[node name="DetailTitle" type="Label" parent="TextureRect/DetailsPage"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "任務標題"

[node name="DetailDescription" type="Label" parent="TextureRect/DetailsPage"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "任務描述"

[node name="Label3" type="Label" parent="TextureRect/DetailsPage"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "目標"

[node name="RequirementsContainer" type="VBoxContainer" parent="TextureRect/DetailsPage"]
layout_mode = 2

[node name="Label3" type="Label" parent="TextureRect/DetailsPage/RequirementsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "獎勵"

[node name="Control" type="Control" parent="TextureRect/DetailsPage"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/DetailsPage"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/DetailsPage/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 40

[node name="RewardsContainer" type="VBoxContainer" parent="TextureRect/DetailsPage/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="TextureRect/DetailsPage/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClaimButton" type="Button" parent="TextureRect/DetailsPage/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_igw40")
text = "領取"

[node name="title" type="Label" parent="TextureRect"]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -608.0
offset_right = 166.0
offset_bottom = -495.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.266667, 0.156863, 0.164706, 1)
theme_override_fonts/font = ExtResource("9_qbihl")
theme_override_font_sizes/font_size = 77
text = "每日任務"

[connection signal="pressed" from="TextureRect/ListPage/TabButtons/DailyTaskButton" to="." method="_on_daily_task_button_pressed"]
[connection signal="pressed" from="TextureRect/ListPage/TabButtons/AchievementButton" to="." method="_on_achievement_button_pressed"]
